--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,11 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">登录</string>
+    <string name="register_button">注册</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">用户名</string>
+    <string name="prompt_phone">手机号</string>
     <string name="prompt_password">密码</string>
     <string name="action_sign_in">登录</string>
     <string name="action_sign_in_short">登录</string>
