--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="error_invalid_password">密码太短</string>
     <string name="error_incorrect_password">密码错误</string>
     <string name="error_field_required">该字段不能为空</string>
+    <string name="navigation">导航</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
